--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
        <td><img src="images/wentao.jpg" alt="Wentao profile picture"></td>
        <td>
          <h1>Wentao Li</h1>
-         <p><em>Research Assistant</em><br />
-           <a href="https://www.me.utexas.edu/">Department of Mechanical Engineering</a><br />
-           <a href="https://www.utexas.edu/">University of Texas at Austin</a><br />
+         <p><em>Research Engineer</em><br />
+           <a href="https://www.lilly.com/">Digital Health R&D</a><br />
+           <a href="https://www.lilly.com/">Eli Lilly and Company</a><br />
            Austin, TX 78712
          </p>
          <p>I am a PhD candidate at University of Texas at Austin. My research focuses on computational biomechanics, human movement science and rehabilitation engineering.</p>
@@ -47,8 +47,12 @@
 
      </tfoot>
 
+    <tr>
+       <td>2022-Present</td>
+       <td>Research Engineer</td>
+     </tr>
      <tr>
-       <td>2016-Present</td>
+       <td>2016-2022</td>
        <td>Research Assistant</td>
      </tr>
      <tr>
@@ -63,11 +67,11 @@
        <td>
          <table cellspacing="10">
           <tr>
-            <td>Web Development</td>
+            <td>Python</td>
             <td>⭐⭐⭐⭐</td>
           </tr>
           <tr>
-            <td>Java</td>
+            <td>C++</td>
             <td>⭐⭐⭐⭐⭐</td>
           </tr>
          </table>
@@ -75,11 +79,11 @@
        <td>
         <table cellspacing="10">
           <tr>
-            <td>OpenSim</td>
+            <td>R</td>
             <td>⭐⭐⭐⭐⭐</td>
           </tr>
           <tr>
-            <td>MATLAB</td>
+            <td>OpenSim</td>
             <td>⭐⭐⭐⭐⭐</td>
           </tr>
         </table>
