--- a/index.html
+++ b/index.html
@@ -1,99 +1,65 @@
- <!DOCTYPE html>
- <html lang="en" dir="ltr">
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Wentao Li</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
+  </head>
 
- <head>
-   <meta charset="utf-8">
-   <title>Wentao's Personal Site</title>
- </head>
+  <body>
 
- <body>
-   <table cellspacing="20">
-     <tr>
-       <td><img src="images/wentao.jpg" alt="Wentao profile picture"></td>
-       <td>
-         <h1>Wentao Li</h1>
-         <p><em>Research Engineer</em><br />
-           <a href="https://www.lilly.com/">Digital Health R&D</a><br />
-           <a href="https://www.lilly.com/">Eli Lilly and Company</a><br />
-           Austin, TX 78712
-         </p>
-         <p>I am a PhD candidate at University of Texas at Austin. My research focuses on computational biomechanics, human movement science and rehabilitation engineering.</p>
-       </td>
-     </tr>
-   </table>
+    <div class="top-container">
+      <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+      <h1>I'm Wentao Li</h1>
+      <h2> a <span class="pro">Research</span> Engineer</h2>
+      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+      <img src="images/mountain.png" alt="mountain-img">
+    </div>
+
+    <div class="middle-container">
+      <div class="profile">
+        <img src="images/angela.png" alt="profile-img">
+        <h2>Hello.</h2>
+        <p class="intro">I'm an Advisor - Research Engineer at Eli Lilly and Company. I got my Ph.D. degree in Mechancial Engineering from The University of Texas at Austin. My research focuses on computational biomechanics, human movement science and rehabilitation engineering.  </p>
+      </div>
+
+      <hr>
+
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="skill-img1" src="images/computer.png" alt="skill-img">
+          <h3>Lorem & Ipsum</h3>
+          <p class="code-skill-description">Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+        </div>
+        <div class="skill-row">
+          <img class="skill-img2" src="images/chillies.png" alt="skill-img">
+          <h3>Lorem Ipsum Dolor</h3>
+          <p class="chilli-skill-description">Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+        </div>
+      </div>
+
+      <hr>
+
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+        <p class="last-word">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+        <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+      </div>
+    </div>
 
 
-   <hr>
-   <h3>Education</h3>
-   <ul>
-     <li>University of Texas at Austin</li>
-     <li>University of Texas at Dallas</li>
-     <li>University of Illinois at Urbana-Champaign</li>
-     <li>China Agricultural University</li>
-   </ul>
-   <hr>
-   <h3>Work Experience</h3>
-   <table>
-     <thead>
-       <tr>
-         <th>Dates</th>
-         <th>Work</th>
-       </tr>
-     </thead>
-     <tbody>
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/">Twitter</a>
+      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <p class="copyright">© Name Surname.</p>
+    </div>
 
-     </tbody>
-     <tfoot>
-
-     </tfoot>
-
-    <tr>
-       <td>2022-Present</td>
-       <td>Research Engineer</td>
-     </tr>
-     <tr>
-       <td>2016-2022</td>
-       <td>Research Assistant</td>
-     </tr>
-     <tr>
-       <td>2015-2016</td>
-       <td>Mechantronic Engineer</td>
-     </tr>
-   </table>
-<hr>
-   <h3>Skills</h3>
-   <table border="1">
-     <tr>
-       <td>
-         <table cellspacing="10">
-          <tr>
-            <td>Python</td>
-            <td>⭐⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>C++</td>
-            <td>⭐⭐⭐⭐⭐</td>
-          </tr>
-         </table>
-       </td>
-       <td>
-        <table cellspacing="10">
-          <tr>
-            <td>R</td>
-            <td>⭐⭐⭐⭐⭐</td>
-          </tr>
-          <tr>
-            <td>OpenSim</td>
-            <td>⭐⭐⭐⭐⭐</td>
-          </tr>
-        </table>
-       </td>
-     </tr>
-   </table>
-
-   <hr>
-   <h3><a href="hobbies.html">My hobbies</a></h3>
-   <h3><a href="contact.html">Contact me</a> </h3>
- </body>
-
- </html>
+  </body>
+</html>
