--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <hr>
 
       <div class="skills">
-        <h2>My Skills.</h2>
+        <h2>My Experience</h2>
         <div class="skill-row">
           <img class="skill-img1" src="images/computer.png" alt="skill-img">
           <h3>Lorem & Ipsum</h3>
