--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h1>I'm Wentao Li</h1>
       <h2> a <span class="pro">Research</span> Engineer</h2>
       <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
-      <img src="mountain.png" alt="mountain-img">
+      <img src="mountain.jpg" alt="mountain-img">
     </div>
 
     <div class="middle-container">
