--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
       <h1>I'm Wentao Li</h1>
       <h2> a <span class="pro">Research</span> Engineer</h2>
       <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
-      <img src="mountain.jpg" alt="mountain-img">
+      <img src="mountain.png" alt="mountain-img">
     </div>
 
     <div class="middle-container">
       <div class="profile">
-        <img src="images/angela.png" alt="profile-img">
+        <img src="images/profile.png" alt="profile-img">
         <h2>Hello.</h2>
         <p class="intro">I'm an Advisor - Research Engineer at Eli Lilly and Company. I got my Ph.D. degree in Mechancial Engineering from The University of Texas at Austin. My research focuses on computational biomechanics, human movement science and rehabilitation engineering.  </p>
       </div>
